<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#F1FD7B"

    android:id="@+id/root"
    tools:context=".MainActivity">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp">

        <TextView
            android:layout_weight="25"
            android:layout_columnWeight="0.1"
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="0"


            android:textColor="@color/black"
            android:text="@string/telephone_number"/>

        <EditText
            android:id="@+id/phone"
            android:layout_weight="25"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="1"

            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"

            android:hint=""
            android:inputType="phone"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_weight="25"
            android:layout_columnWeight="0.1"
            android:layout_row="1"
            android:layout_column="0"

            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"

            android:textColor="@color/black"
            android:text="@string/Name"

            />

        <EditText
            android:id="@+id/name"
            android:layout_weight="25"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_column="1"

            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"

            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView10"
            android:layout_weight="25"
            android:layout_columnWeight="0.1"
            android:layout_row="2"
            android:layout_column="0"

            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"

            android:textColor="@color/black"
            android:text="@string/Surname"/>

        <EditText
            android:layout_weight="25"
            android:layout_columnWeight="1"
            android:id="@+id/surname"
            android:layout_row="2"
            android:layout_column="1"

            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"

            android:inputType="textPersonName"/>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regist_button"
            android:width="150sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registation"

            android:background="@drawable/my_button"/>


    </LinearLayout>


</LinearLayout>