<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#F1FD7B"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"

        android:textColor="@color/black"
        android:text="@string/Point_From" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="50sp">

        <TextView
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="0.1"
            android:layout_weight="25"


            android:text="@string/Street"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/streetA"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="5sp"

            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:layout_weight="25"

            android:hint=""
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="0.1"
            android:layout_marginLeft="5sp"

            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:layout_weight="25"

            android:text="@string/House"
            android:textColor="@color/black"

            />

        <EditText
            android:id="@+id/houseA"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="5sp"

            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:layout_weight="25"

            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView10"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="0.1"
            android:layout_marginLeft="5sp"

            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:layout_weight="25"

            android:text="@string/Flat"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/flatA"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="5sp"

            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:layout_weight="25"

            android:inputType="textPersonName" />
    </GridLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"

        android:textColor="@color/black"
        android:text="@string/Point_To" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="50sp">

        <TextView
            android:id="@+id/textView4"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="0.1"
            android:layout_weight="25"


            android:text="@string/Street"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/streetB"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="5sp"

            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:layout_weight="25"

            android:hint=""
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="0.1"
            android:layout_marginLeft="5sp"

            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:layout_weight="25"

            android:text="@string/House"
            android:textColor="@color/black"

            />

        <EditText
            android:id="@+id/houseB"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="5sp"

            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:layout_weight="25"

            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="0.1"
            android:layout_marginLeft="5sp"

            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:layout_weight="25"

            android:text="@string/Flat"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/flatB"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="5sp"

            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:layout_weight="25"

            android:inputType="textPersonName" />
    </GridLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:width="150sp"
            android:layout_marginBottom="20sp"

            android:background="@drawable/my_button"
            android:text="@string/OK" />
    </FrameLayout>

</LinearLayout>